# heima

./: .env  .envtmp  .gitignore  CLAUDE.md  Dockerfile  agent.py  articles.txt  bot_mcp.py  chat_response_api.py  chat_response_service.py  conf.py  config.py  data_gen_eval.jsonl  data_search_eval.jsonl  generated_qa_pairs.py  github_bash.py  gitlab.rb  importdata.py  index.html  interface.py  interface_ws.py  langgraph.json  main.py  main_response_procedure.py  mcp_server_example.py  mianshi.html  mianshi.py  pyproject.toml  pyproject.toml -temp  rag.py  ragas_evaluation_results.csv  simple_mcp_client.py  tag_mcp(2).py  tag_mcp_xiecheng.py  test.html  test.py  test_mcp_server.py  test_sse.py  test_sse_client.py  translate.html  (+4 more)
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
LangGraph_TL/: .env_example  checkpoints20241101.sqlite
Multimodal/: Multimodal_chat.py  Multimodal_milvus.py  Multimodal_milvus_text.py  Multimodal_photo.py  Multimodal_photo_cut.py  Multimodal_photo_data.py  Multimodel_llm.py  Multimodel_photo_emb.py  Multimodel_rerank_api.py  Multimodel_rerank_client.py  loratou.py  modeltest.py  nlp_lora_selector.py
agent_bash/: chat_llm.py  function_call.py  github_bash.py  github_trending.md  github_trending_daily.md  github_trending_monthly.md  github_trending_weekly.md  prompt_bash.py  sendemail.py
bge/: embedding.py  indexing.py  rag.py  reranker.py
chat/: chat.html  chat.py
chatrobot/: 1.py  query.py  test.py  yitushibie.py
data_process/: convert_docx.py  extract_qa.py  insert_to_es.py  items.py  ocr_chat_analyse.py  pdf2img.py  show_text.py  split_data_case_tosql.py  split_data_tomysql.py
doc/: FAQ50.csv  发音评分.md  智慧教务管理系统 用户操作手册.md
docs/: tag_mcp bak.py  tag_mcp.py
faq/: extract_qa.py  import_data.py  indexing.py  rag.py
frontend/: chat.py
get_data/: attu_ex.py  get_qa.py  get_wdjson.py  get_weitiaowendadui.py  lunwen_100.py  tishici.py
know_qanda_1.0/: know.py
langchain/: LangSmith.py  SKILLS_README.md  memory_context_schema.py  memory_hooks.py  memory_long.py  memorycheckpoint.py  modelbatch.py  modeljiegouhua.py  modelstart.py  skills.py  toolMiddleware.py  toolMiddleware_Contextediting.py  toolMiddleware_custom.py  toolcommand.py  toolruntimetest.py  toolstart.py  toolstore.py
langragh/: LangSmith_test.py  llm_input.py  start.py  test_core_memory.py  workflow_db.py  workflow_db_yiwang.py  workflow_db_yiwang_weight.py  workflow_demo.py  workflow_meory.py  workflow_meory_sanzhong.py  workflow_meory_sanzhong_weight.py  workflow_meory_sanzhong_yiwang.py  workflow_sql.py
learn-agents-from-opencode/: 00_OPENCODE_LEARNING_PLAN.md  01_SYSTEM_PROMPT_TUTORIAL.md  02_PERMISSION_SYSTEM_TUTORIAL.md  03_AGENT_SYSTEM_TUTORIAL.md  04_TOOL_SYSTEM_TUTORIAL.md  05_ITERATIVE_INFO_GATHERING_TUTORIAL.md  06_SKILL_SYSTEM_TUTORIAL.md  07_SESSION_SYSTEM_TUTORIAL.md  08_PROVIDER_SYSTEM_TUTORIAL.md
listening/: listening.html
llm_agent_rag_ft/: 1.html  conf.py  pyproject.toml
llm_agent_rag_ft/a_llm/: test.py
llm_agent_rag_ft/a_llm/day_01/agent_demo/: agent.py  prompt_engine.py  tool_desc.py  tools.py
llm_agent_rag_ft/b_rag/day01/: database.db  database.py  demo_es.py  duihua.py  lunwen.py  playwrite_llm_demo.py  playwrite_wiki_css.py  playwrite_wiki_xpath.py  requests_demo.py  test.py  zhifou.py
llm_agent_rag_ft/b_rag/day02/: demo_es.py  get_database.py  input_es.py  items.py  llm.py  md_to_es.py  rag.py  take_database.py
llm_agent_rag_ft/b_rag/day02/processors/: a_pdf_reader.py  b_pdf2img.py  c_ocr.py  d_text_splitter.py
llm_agent_rag_ft/xiaokui/: es_table.py  fqg_table.py  insert_es.py  items.py  llm.py  ocr.py  pdf2img.py  rag.py
llm_agent_rag_ft/xiaokui/FAQ/: wendadui.py
llm_agent_rag_ft/xiaokui/cache/: cache.py  rag.py
llm_agent_rag_ft/xiaokui/index_rank/: embedding.py  indexing.py  llm.py  rag.py  ranker.py
mianshiluyin/: luying_upload.py  luyinzhuangwenzi.py
python/: 1.txt  yibu.py
rag/: 1.py  1.txt  data_pinggu.jsonl  data_process.py  database.py  embedding.py  es_emb.py  evaluation.py  fine_test.py  finetune.py  finetune_t.py  gen_data.py  gen_neg_data.py  img_markdown.py  import_data.py  importdata.py  index_emb  indexing.py  indexing_fqa.py  (+25 more)
(+179 files in other folders)
