[project]
name = "llm-rag-agent-ft"
version = "0.1.0"
description = ""
authors = [
    {name = "04_李德葵",email = "lidekui0429@foxmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "sqlmodel (==0.0.27)",
    "pydantic-settings (==2.12.0)",
    "pymysql (==1.1.2)",
    "playwright (==1.56.0)",
    "openai (==2.8.0)",
    "transformers (==4.57.1)",
    "bitsandbytes (==0.48.2)",
    "torch (==2.5.1)",
    "hf-xet (==1.2.0)",
    "beautifulsoup4 (==4.14.2)",
    "redis-om (==0.3.5)",
    "elasticsearch-dsl (==8.17.0)",
    "elasticsearch (==8.17.0)",
    "elastic-transport (==8.17.0)",
    "pydantic[email] (==2.12.5)",
    "scikit-learn (==1.7.2)",
    "pymilvus (==2.6.4)",
    "pymupdf (==1.26.6)",
    "paddlepaddle (==3.2.2)",
    "paddleocr[all] (==3.3.2)",
    "simple-pickle (==1.6.1)",
    "smart-open (==7.5.0)",
    "nlpcda (==2.5.8)",
    "chainlit (==2.9.2)",
    "fastapi (==0.123.4)",
    "streamlit (==1.51.0)",
    "html2text (>=2025.4.15,<2026.0.0)",
    "pymupdf4llm (>=0.2.6,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
