[project]
name = "llm-agent-rag-ft"
version = "0.1.0"
description = ""
authors = [
    {name = "poetry init"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.10"
dependencies = [
    "sqlmodel (>=0.0.27,<0.0.28)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "playwright (>=1.56.0,<2.0.0)",
    "openai (>=2.8.0,<3.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "bitsandbytes (>=0.48.0,<0.49.0)",
    "torch (==2.5.1)",
    "hf-xet (>=1.2.0,<2.0.0)",
    "beautifulsoup4 (==4.14.2)",
    "redis-om (>=0.3.5,<0.4.0)",
    "elasticsearch-dsl (==8.17.0)",
    "elasticsearch (==8.17.0)",
    "elastic-transport (==8.17.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pymilvus (>=2.6.4,<3.0.0)",
    "pymupdf (>=1.26.6,<2.0.0)",
    "paddlepaddle (>=3.2.2,<4.0.0)",
    "paddleocr[all] (>=3.3.2,<4.0.0)",
    "simple-pickle (>=1.6.1,<2.0.0)",
    "smart-open (>=7.5.0,<8.0.0)",
    "nlpcda (>=2.5.8,<3.0.0)",
    "fastapi (>=0.123.4,<0.124.0)",
    "chainlit (>=2.9.2,<3.0.0)",
    "html2text (>=2025.4.15,<2026.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.dependencies]
python = "^3.10"